--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rabin Poudel</title>
-    <link href="/src/index.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/dist/styles.css">
+
   </head>
   <body>
     <div id="root"></div>
